@@ -1,4 +1,4 @@
-$Id: CHANGES,v 1.214 2003/02/11 09:56:46 stelian Exp $
+$Id: CHANGES,v 1.215 2003/02/11 12:43:44 stelian Exp $
 
 Changes between versions 0.4b33 and 0.4b34 (released ?????????????????)
 =======================================================================
@@ -14,7 +14,11 @@ Changes between versions 0.4b33 and 0.4b34 (released ?????????????????)
 
 3.	Fixed restore to correctly ignore sockets when comparing
 	a dump (as socket cannot be properly restored anyway). Thanks
-	to <gunther@mit.edu> for reporting the bug.
+	to Gunther Reiszig <gunther@mit.edu> for reporting the bug.
+
+4.	Fixed restore to correctly access the archive file (-A argument)
+	even when using a remote tape. Thanks to Fabrice Bellet 
+	<fabrice@bellet.info> for reporting the bug.
 
 Changes between versions 0.4b32 and 0.4b33 (released February 10, 2003)
 =======================================================================
